--- a/core/build.gradle
+++ b/core/build.gradle
@@ -4,5 +4,6 @@ if (!hasProperty('mainClass')) {
 }
 
 dependencies {
-    // No additional deps
+    compile group: 'javax.media', name: 'jmf', version: '2.1.1e'
+    compile files('/home/zygon/src/jffmpeg-1.1.0.jar')
 }
