latest code from recent 3-4 years

--- a/memory/build.gradle
+++ b/memory/build.gradle
@@ -1,6 +1,6 @@
 
 if (!hasProperty('mainClass')) {
-    ext.mainClass = ''
+    ext.mainClass = 'com.zygon.htm.memory.sponge.MemoryDriver'
 }
 
 dependencies {
