--- a/common.gradle
+++ b/common.gradle
@@ -8,7 +8,7 @@ apply plugin: 'maven'
 String mavenGroupId = '1'
 String mavenVersion = '1.0-SNAPSHOT'
 
-sourceCompatibility = '1.8'
+//sourceCompatibility = '1.8'
 [compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
 
 repositories {
@@ -20,9 +20,14 @@ repositories {
 }
 
 dependencies {
-    compile group: 'com.google.guava', name: 'guava', version: '18.0'
+    compile group: 'com.google.guava', name: 'guava', version: '22.0'
     compile group: 'org.apache.commons', name: 'commons-math3', version: '3.5'
-
+    
+    compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.22'
+    compile group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.22'
+    
+    compile group: 'com.typesafe.akka', name: 'akka-actor_2.13', version: '2.6.5'
+    
     testCompile group: 'junit', name: 'junit', version: '4.10'
 }
 
