--- a/motor/build.gradle
+++ b/motor/build.gradle
@@ -8,4 +8,5 @@ dependencies {
 
     compile group: 'javax.media', name: 'jmf', version: '2.1.1e'
     compile files('/home/zygon/src/jffmpeg-1.1.0.jar')
+    compile files('/home/zygon/GridWorldCode/gridworld.jar')
 }
